[package]
name = "fugue-concolic-solver-z3"
version = "0.1.0"
edition = "2021"

[features]
static-solver = ["z3/static-link-z3"]
default = []

[dependencies]
fugue = { version = "0.2", registry = "fugue" }
fugue-concolic = { version = "0.2", registry = "fugue" }
fxhash = "0.2"
z3 = { version = "0.11" }
